--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simple-tribes-game",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "src/main.js",
   "scripts": {
     "start": "electron .",
     "dev": "NODE_ENV=development electron .",
